--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,16 +14,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11
+    - name: Set up JDK 1.11
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
-        distribution: 'adopt'
+        java-version: 1.11
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: cd Pathfinding && chmod +x gradlew
     - name: Test with Gradle
-      run: ./gradlew test
+      run: cd Pathfinding && ./gradlew test
     - name: Code coverage raport
-      run: ./gradlew jacocoTestReport
+      run: cd Pathfinding && ./gradlew jacocoTestReport
     - name: Data to codecov
-      run: bash <(curl -s https://codecov.io/bash)
+      run: cd Pathfinding && bash <(curl -s https://codecov.io/bash)
