--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,6 +18,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: 1.11
+        distribution: 'adopt'
     - name: Grant execute permission for gradlew
       run: cd Pathfinding && chmod +x gradlew
     - name: Test with Gradle
