Fixing build to generate jar

--- a/Pathfinding/build.gradle
+++ b/Pathfinding/build.gradle
@@ -47,5 +47,11 @@ run {
     standardInput = System.in
     standardOutput = System.out
 }
+jar {
+    manifest {
+        attributes 'Main-Class': 'Pathfinding.Main'
+    }
+}
+
 //
 //check.dependsOn jacocoTestReport
